php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31454 session_set_save_handler crashes PHP when supplied non-existent object ref.
Submitted: 2005-01-09 15:37 UTC Modified: 2005-01-09 18:58 UTC
From: irchtml@php.net Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 5.0.3 OS: Windows XP
Private report: No CVE-ID: None
 [2005-01-09 15:37 UTC] irchtml@php.net
Description:
------------
When supplying a non-existent object reference as a callback, session_set_save_handler() hangs for a moment and php crashes, taking Apache with it.

5.0.3 win32 release, Apache1 SAPI, recommended ini, no external modules loaded. Also tested with 5.0.2, setup same as above.

Reproduce code:
---------------
<?php

class Foo {
	function Foo() {
		session_set_save_handler(
			array(&$arf, 'open'),
			array(&$arf, 'close'),
			array(&$arf, 'read'),
			array(&$arf, 'write'),
			array(&$arf, 'destroy'),
			array(&$arf, 'gc'));
	}
}

$foo =& new Foo();
echo 'bar!';
?>

Expected result:
----------------
The string "bar!" should be output.

Actual result:
--------------
No output, PHP crashes, taking Apache child with it.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-01-09 18:58 UTC] tony2001@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 22:00:01 2026 UTC