fix bug #31454 (session_set_save_handler crashes PHP when supplied non-existent object ref)